# load-library-injector

./: .gitignore  CMakeLists.txt  readme
injector/source/include/: config.h  inject.h  process.h
injector/source/src/: config.cpp  inject.cpp  main.cpp  process.cpp
testdll/: test.cpp
